--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -1,3 +1,7 @@
 <html>
+<body>
 <p>This is Grace's web page</p>
+  <h2>Beautiful Flower</h2>
+<img> scr=https://static.pexels.com/photos/39517/rose-flower-blossom-bloom-39517.jpeg alt="Dahlia Flower" style="width:304px;height:228px;">
+</body>
 </html>
