--- a/nya.html
+++ b/nya.html
@@ -1,3 +1,8 @@
 <html>
 <p> This is Nya's Website </p>
 </html>
+
+
+<html>
+  
+<body background="http://cdn.wallpapersafari.com/22/51/tu7jhF.jpg" >
