--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -1,7 +1,6 @@
 <html>
 <body>
-<p>This is Grace's web page</p>
-  <h2>Beautiful Flower</h2>
-<img scr=http://www.drodd.com/images14/flower18.jpg style="width:304px;height:228px;">
+<p>This is Grace's web page. It is very plain and boring</p>
+  
 </body>
 </html>
