--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en"> <head> 
 <meta http-equiv="content-type" content="text/html; charset=utf-8"> 
 
-<title>Hi</title> 
+<title>Study With Vocab and Games</title> 
 </head> 
 <body> 
 <p>This is my web page</p> 
