--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head> 
 <body> 
 <p>This is my web page</p> 
+<a href=https://5shadesofcode.github.io/Final_Project/Grace_Tao>Grace's Web Page</a>
 </body> 
 </html>
