--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <body> 
 <p>This is my web page</p> 
 <a href=https://5shadesofcode.github.io/Final_Project/Grace_Tao>Grace's Web Page</a>
+  
+  <a href=https://5shadesofcode.github.io/Final_Project/nya.html>Nya's Amazingly Awesome Webpage</a>
+  
 </body> 
 </html>
