--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 <body> 
 <p>This is my web page</p> 
 <a href=https://5shadesofcode.github.io/Final_Project/Grace_Tao>Grace's Web Page</a>
-  
-  <a href=https://5shadesofcode.github.io/Final_Project/nya.html>Nya's Amazingly Awesome Webpage</a>
-  
+<a href=https://5shadesofcode.github.io/Final_Project/Lexie>Lexies Web Page</a>
 </body> 
 </html>
