--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <p>This is my web page</p> 
 <a href=https://5shadesofcode.github.io/Final_Project/Grace_Tao>Grace's Web Page</a>
 <a href=https://5shadesofcode.github.io/Final_Project/Lexie>Lexies Web Page</a>
+  <a href=https://5shadesofcode.github.io/Final_Project/nya.html>Nya's Awesome Web Page</a>
 </body> 
 </html>
