--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <a href=https://5shadesofcode.github.io/Final_Project/Grace_Tao>Grace's Web Page</a>
 <a href=https://5shadesofcode.github.io/Final_Project/Lexie>Lexies Web Page</a>
   <a href=https://5shadesofcode.github.io/Final_Project/nya.html>Nya's Awesome Web Page</a>
+  
+  <body background="https://s-media-cache-ak0.pinimg.com/736x/f2/26/a9/f226a9ea210163f642ab8699f0ebf035.jpg">
 </body> 
 </html>
