--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"> 
-<html lang="en"> <head> 
-<meta http-equiv="content-type" content="text/html; charset=utf-8"> 
+<html > <head> 
+<meta > 
 
-<title>Study With Vocab and Games</title> 
+<title></title> 
 </head> 
 <body> 
-<p>This is my web page</p> 
-<a href=https://5shadesofcode.github.io/Final_Project/Grace_Tao>Grace's Web Page</a>
-<a href=https://5shadesofcode.github.io/Final_Project/Lexie>Lexies Web Page</a>
-  <a href=https://5shadesofcode.github.io/Final_Project/nya.html>Nya's Awesome Web Page</a>
+<p>
   
-  <body background="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwi39Z2PwYHSAhUI4iYKHaL3BXQQjRwIBw&url=https%3A%2F%2Fwww.vecteezy.com%2Ffree-vector%2Fblack-background&psig=AFQjCNGQWHabreDtlyG7Qqd_pZy2BOtAWA&ust=1486677957230836">
-</body> 
+  <body 
 </html>
