--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"> 
 <html > <head> 
-<meta > 
+<meta >
+  .region-header .block-search /* Float search block to right when placed in header region */ {
+float: right;
+  
+margin-bottom: 0;
+}
 
 <title></title> 
 </head> 
