--- a/index.html
+++ b/index.html
@@ -1,16 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"> 
 <html > <head> 
 <meta >
-  .region-header .block-search /* Float search block to right when placed in header region */ {
-float: right;
-  
-margin-bottom: 0;
-}
+  <input type="text" name="search" placeholder="Search..">
 
-<title></title> 
-</head> 
-<body> 
-<p>
-  
-  <body 
-</html>
