--- a/index.html
+++ b/index.html
@@ -2,4 +2,15 @@
 <html > <head> 
 <meta >
   <input type="text" name="search" placeholder="Search..">
+  
+  .input[type=text] {
+    width: 130px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
+
+/* When the input field gets focus, change its width to 100% */
+input[type=text]:focus {
+    width: 100%;
+}
 
