--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"> 
-<html > <head> 
-<meta >
-  <input type="text" name="search" placeholder="Search..">
-  
-  .input[type=text] {
-    width: 130px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
+<html lang="en"> <head> 
+<meta http-equiv="content-type" content="text/html; charset=utf-8"> 
 
-/* When the input field gets focus, change its width to 100% */
-input[type=text]:focus {
-    width: 100%;
-}
-  
- 
+  <title>Five Shades of Code Project</title>
+<body>Study Guide
+</body>                                                  
+</html>
