--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"> 
-<html > <head>
-  <button type="button">Login< 
-    
+<html lang="en"> <head> 
+<meta http-equiv="content-type" content="text/html; charset=utf-8"> 
+  <title>Five Shades of Code Project</title>
+<body><font size="20" color="green"></font>
+<button type="Sign Up">Sign Up</button>
 
-  
-}
-  
- 
+</body>                                                  
+</html>
