--- a/nithya.html
+++ b/nithya.html
@@ -1,3 +1,2 @@
-<form method="get" action="/page2">
-    <button type="submit">Continue</button>
-</form>
+<button type="Sign Up">Sign Up!</button>
+
