--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -1,6 +1,6 @@
 <html>
-<body>
-<p>This is Grace's web page. It is very plain and boring</p>
+<body><font size="18" color="Forest Green" face=cursive>Five Shades of Code Project</font>
+
   
 </body>
 </html>
