--- a/nithya.html
+++ b/nithya.html
@@ -1,2 +1,4 @@
-<button type="Sign Up">Sign Up!</button>
-
+<button type="Sign Up">Sign Up</button>
+<form method="get" action="/page2">
+    <button type="submit">Continue</button>
+</form>
