--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -1,5 +1,5 @@
 <html>
-<body><font size="10" color="Forest Green" face=cursive>Five Shades of Code Project</font>
+<body><font size="10" color="Green">Five Shades of Code Project</font>
 
   
 </body>
