--- a/nithya.html
+++ b/nithya.html
@@ -1,4 +1,4 @@
 <button type="Sign Up">Sign Up</button>
-<form method="get" action="/page2">
-    <button type="submit">Continue</button>
+<form method="get" action="Sign Up">
+    <button type="submit">Sign Up</button
 </form>
