--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -1,5 +1,5 @@
 <html>
-<body><font size="10" color="Forest Green" face="cursive">5 Shades of Code Project</font>
+<body><font size="10" color="Blue" face="cursive">5 Shades of Code Project</font>
 
   
 </body>
