--- a/nya.html
+++ b/nya.html
@@ -1,7 +1,12 @@
-<html>
-  <h1>Five Shades of Code!</h1>
-<body background="https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwjLjNaUx4HSAhUBUCYKHUIMAjkQjRwIBw&url=https%3A%2F%2Fwww.tumblr.com%2Ftagged%2Ffunny-wallpaper&psig=AFQjCNGVYCTxXwxe3Vdw1EAfuDyLiAR-7g&ust=1486679562858170">
+<!DOCTYPE html>
 <html>
   
-
-  
+  <head>
+    <title>5 Shades of Code
+      <meta charset="UTF-8">
+</head>
+<body>
+  <p> This is a website created by five girls who want to help kids study!
+    <p> Please join our newsletter and Sign Up for more info!
+      <p>             -Five Shades of CODE
+   
