--- a/nithya.html
+++ b/nithya.html
@@ -1,3 +1,5 @@
-<form method="get" action="Sign Up">
-    <button type="submit">Sign Up</button
-</form>
+<button type="Login">Click Me!</button>
+<a href="login.html"><button>Go To Login</button></a>
+
+
+
