--- a/nithya.html
+++ b/nithya.html
@@ -1,5 +1,8 @@
 <button type="Login">Click Me!</button>
 <a href="login.html"><button>Go To Login</button></a>
+<form action="login.html">
+<input type="submit" value="Login">
+</form>
 
 
 
