--- a/nithya.html
+++ b/nithya.html
@@ -1,4 +1,4 @@
-<button type="Login">Click Me!</button>
+<button type="Login">Sign Up</button>
 <a href="login.html"><button>Go To Login</button></a>
 <form action="login.html">
 <input type="submit" value="Login">
