--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -1,6 +1,5 @@
 <html>
 <body><font size="10" color="Blue" face="Impact">5 Shades of Code Project</font>
-
-  
+  <font size="3" color="orange" face="Cursive">Less stressful, more helpful</font>
 </body>
 </html>
