--- a/nya.html
+++ b/nya.html
@@ -6,7 +6,7 @@
       <meta charset="UTF-8">
 </head>
 <body>
-  <p> This is a website created by five girls who want to help kids study!
-    <p> Please join our newsletter and Sign Up for more info!
-      <p>             -Five Shades of CODE
-   
+  <p> This is a website created by five girls who want to help kids study! <p>
+    <p> Please join our newsletter and Sign Up for more info! <p>
+      <p>             -Five Shades of CODE <p>
+  <p> We hope you enjoy our site <p>
