--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -1,6 +1,6 @@
 <html>
 <body><font size="10" color="Blue" face="Impact">Urban Study</font>
-<font size="5" color="orange">Less stressful, more helpful</font>
-
 </body>
+<body><font size="5" color="orange">Less stressful, more helpful</font>
+  </body>
 </html>
