--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -1,5 +1,5 @@
 <html>
 <body><font size="10" color="Blue" face="Impact">Urban Study</font>
-  <p style="text-align: right;"><font size="5" color="orange">Less stressful, more helpful</font></p>
+  <p style="text-align: left;"><font size="5" color="orange">Less stressful, more helpful</font></p>
         </body>
 </html>
