--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -2,4 +2,6 @@
 <body><font size="10" color="Blue" face="Impact">Urban Study</font>
   <p style="text-align: left;"><font size="5" color="orange">Less stressful, more helpful</font></p>
         </body>
+  <img src=https://www.clipartsgram.com/image/100562207-greenyellowgradient-design-pattern-background-images-photoshop-psd.jpg style="width:304px;height:228px;">
 </html>
+
