--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -1,7 +1,11 @@
 <html>
-<body><font size="10" color="Blue" face="Impact">Urban Study</font>
+  <background>
+    <img src=https://www.clipartsgram.com/image/100562207-greenyellowgradient-design-pattern-background-images-photoshop-psd.jpg style="width:304px;height:228px;">
+  </background> 
+    <body><font size="10" color="Blue" face="Impact">Urban Study</font>
+ 
   <p style="text-align: left;"><font size="5" color="orange">Less stressful, more helpful</font></p>
         </body>
-  <img src=https://www.clipartsgram.com/image/100562207-greenyellowgradient-design-pattern-background-images-photoshop-psd.jpg style="width:304px;height:228px;">
+
 </html>
 
