--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -1,7 +1,7 @@
 <html>
   <body><font size="10" face="Impact">Urban Study</font>
 <p style="text-align: left;"><font size="5">Less stressful, more helpful</font></p>
-    <style>body {background-image: url("https://qzprod.files.wordpress.com/2016/06/orange_lede.png");}</style>      
+    <style>body {background-image: url("http://exruefrontenac.com/images6/couleur-turquoise-9.jpg");}</style>      
   </body>
   
 </html>
