--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -2,7 +2,9 @@
   <body><font size="10" face="Impact">Urban Study</font>
 <p style="text-align: left;"><font size="5">Less stressful, more helpful</font></p>
     <style>body {background-image: url("http://exruefrontenac.com/images6/couleur-turquoise-9.jpg");}</style>      
+<button type="button">Log In</button>
   </body>
+  
   
 </html>
 
