--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -2,7 +2,7 @@
   <body><font size="10" face="Impact">Urban Study</font>
 <p style="text-align: left;"><font size="5">Less stressful, more helpful</font></p>
     <style>body {background-image: url("http://exruefrontenac.com/images6/couleur-turquoise-9.jpg");}</style>      
-<input type="button" onclick="window.location.href='www.google.com'" value="Click Me!"/>
+<input type="button" onclick="window.location.href='http://www.google.com'" value="Click Me!"/>
 <a href="http://www.google.com">Click here</a>
   </body>
   
