--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -3,7 +3,7 @@
 <p style="text-align: left;"><font size="5">Less stressful, more helpful</font></p>
     <style>body {background-image: url("http://exruefrontenac.com/images6/couleur-turquoise-9.jpg");}</style>      
 <input type="button" onclick="window.location.href='Grace1'" value="Click Me!"/>
-<a href="http://www.google.com">Click here</a>
+<a href="Grace1">Click here</a>
   </body>
   
   
