--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -2,8 +2,7 @@
   <body><font size="10" face="Impact">Urban Study</font>
 <p style="text-align: left;"><font size="5">Less stressful, more helpful</font></p>
     <style>body {background-image: url("http://exruefrontenac.com/images6/couleur-turquoise-9.jpg");}</style>      
-<input type="button" onclick="window.location.href='Grace1'" value="Click!"/>
-<a href="Grace1">Click</a>
+<input type="button" onclick="window.location.href='Grace1'" value="Log In"/>
   </body>
   
   
