--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -1,11 +1,9 @@
 <html>
+ <img src="https://s-media-cache-ak0.pinimg.com/736x/1e/e6/6c/1ee66c21479e525ff461c8f7c0a99d1a.jpg" style="500:500;500:500;">
   <body><font size="10" face="Impact">Urban Study</font>
 <p style="text-align: left;"><font size="5">Less stressful, more helpful</font></p>
     <style>body {background-image: url("http://exruefrontenac.com/images6/couleur-turquoise-9.jpg");}</style>      
-<input type="button" onclick="window.location.href='log in page'" value="Log In"/>
-<input type="button" onclick="window.location.href='sign in page'" value="Sign In"/>
   </body>
-  
   
 </html>
 
