--- a/Grace_Tao.html
+++ b/Grace_Tao.html
@@ -3,7 +3,7 @@
 <p style="text-align: left;"><font size="5">Less stressful, more helpful</font></p>
     <style>body {background-image: url("http://exruefrontenac.com/images6/couleur-turquoise-9.jpg");}</style>      
 <input type="button" onclick="window.location.href='log in page'" value="Log In"/>
-<input type="button" onclick="window.location.href='sign in page'" value="Sign In"/>
+<input type="button" onclick="window.location.href='sign up page'" value="Sign Up"/>
   </body>
   
   
