--- a/log in page.html
+++ b/log in page.html
@@ -1,7 +1,4 @@
 <form action="/action_page.php">
-  <div class="imgcontainer">
-    <img src="img_avatar2.png" alt="Avatar" class="avatar">
-  </div>
 
   <div class="container">
     <label><b>Username</b></label>
@@ -11,11 +8,9 @@
     <input type="password" placeholder="Enter Password" name="psw" required>
 
     <button type="submit">Login</button>
-    <input type="checkbox" checked="checked"> Remember me
   </div>
 
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
+  <div>
     <span class="psw">Forgot <a href="#">password?</a></span>
   </div>
 </form>
