Update sign up page.html

--- a/sign up page.html
+++ b/sign up page.html
@@ -36,6 +36,4 @@
 				</p>
 			</form>
 		</div>
-		
-	</div>
-</div>  
+  <input type="button" onclick="window.location.href='log in page'" value="Go and Log In"/>
