Update sign up page.html

--- a/sign up page.html
+++ b/sign up page.html
@@ -10,7 +10,7 @@
 
 		<div id="register" class="animate form">
 			<form  action="mysuperscript.php" autocomplete="on"> 
-				<h1> Sign up </h1> 
+				<h1> Sign Up </h1> 
 				<p> 
 					<label for="usernamesignup" class="uname" data-icon="u">Your username</label>
 					<input id="usernamesignup" name="usernamesignup" required="required" type="text" placeholder="mysuperusername690" />
