--- a/log in page.html
+++ b/log in page.html
@@ -7,7 +7,7 @@
 	<div id="wrapper">
 		<div id="login" class="animate form">
 			<form  action="mysuperscript.php" autocomplete="on"> 
-				<h1>Log in</h1> 
+				<h1>Log In</h1> 
 				<p> 
 					<label for="username" class="uname" data-icon="u" > Your email or username </label>
 					<input id="username" name="username" required="required" type="text" placeholder="myusername or mymail@mail.com"/>
